corrects spacing

--- a/less/styles.less
+++ b/less/styles.less
@@ -108,6 +108,9 @@ h1{
 }
 
 
+.eap-toggle-container{
+  margin-bottom: 10px;
+}
 
 
 
